desktop-themes/BlackMATE/gtk-3.0/gtk-widgets.css
/* ... */
scrollbar.horizontal trough {
	background-image: linear-gradient(to bottom,
		@scrollbar_trough,
		shade (@scrollbar_trough, 1.08));
	border-style: none;
	border-radius: 0;
	border-image: none;
}

scrollbar button,
scrollbar.horizontal button,
scrollbar.vertical button {
	color: @theme_fg_color; /*@internal_element_color*/
	border-image: none;
	border-style: none;
	border-width: 0px;
	background-image: none;
	background-color: @less_dark_color;
	min-width: 10px;
	min-height: 10px;
}

scrollbar button:hover,
scrollbar button.horizontal:hover,
scrollbar button.vertical:hover {
	background-image: none;
	background-color: shade(@less_dark_color, 1.4);
	/*border-color: shade(@highlighted_border, 1.1);*/
	color: @theme_fg_color;
	border-image: none;
	border-style: none;
	border-width: 0px;
	min-width: 10px;
	min-height: 10px;
}

scrollbar button:hover:active,
scrollbar.vertical button:hover:active,
scrollbar.horizontal button:hover:active {
	background-color: @less_dark_color;
	background-image: linear-gradient(to top,
	                                  shade(@less_dark_color, 1.5),
	                                  shade(@less_dark_color, 0.86));
	color: @theme_fg_color;
	border-image: none;
	border-style: none;
	border-width: 0px;
}

scrollbar button:disabled,
scrollbar button.horizontal:disabled,
scrollbar button.vertical:disabled {
	background-image: none;
	background-color: transparent;
	color: @insensitive_fg_color;
	border-image: none;
	border-style: none;
	border-width: 0px;
}

scrollbar slider {
	background-color: transparent;
	background-image: linear-gradient(to top,
	                                  shade(@scroll_slider_color, 0.6),
	                                  shade(@scroll_slider_color, 1.6) 50%,
	                                  shade(@scroll_slider_color, 2.0));
	border-color: transparent;
	border-radius: 6px;
	border-width: 1px;
	border-image: none;
}

scrollbar.vertical slider {
	border-width: 1px;
	background-image: linear-gradient(to top,
	                                  shade(@scroll_slider_color, 0.6),
	                                  shade(@scroll_slider_color, 1.6) 50%,
	                                  shade(@scroll_slider_color, 2.0));
	min-width: 13px;
	min-height: 42px;
}

scrollbar.horizontal slider {
	border-width: 1px;
	background-image: linear-gradient(to left,
	                                  shade(@scroll_slider_color, 0.6),
	                                  shade(@scroll_slider_color, 1.6) 50%,
	                                  shade(@scroll_slider_color, 2.0));
	min-height: 13px;
	min-width: 42px;
}

scrollbar slider:hover {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
}

scrollbar.vertical slider:hover {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
}

scrollbar.horizontal slider:hover {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
}

scrollbar slider:hover:active {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
	background-image: linear-gradient(to top,
	                                  shade(@scroll_slider_color, 2.0),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
}

scrollbar.vertical slider:hover:active {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
	background-image: linear-gradient(to top,
	                                  shade(@scroll_slider_color, 2.0),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
}

scrollbar.horizontal slider:hover:active {
	border-width: 1px;
	border-color: @scroll_slider_color;
	border-radius: 6px;
	background-image: linear-gradient(to left,
	                                  shade(@scroll_slider_color, 2.0),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
}

scrollbar slider:disabled {
	background-image: none;
	background-color: shade(@theme_bg_color, 1.5);
}

scrollbar slider.fine-tune:hover:active {
	background-image: url("assets/slider_fine_horizontal.svg"),
	                  linear-gradient(to top,
	                                  shade(@scroll_slider_color, 3.3),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
	background-repeat: no-repeat;
	background-position: center;
}

scrollbar.vertical slider.fine-tune:hover:active {
	background-image: url("assets/slider_fine_vertical.svg"),
	                  linear-gradient(to left,
	                                  shade(@scroll_slider_color, 3.3),
	                                  shade(@scroll_slider_color, 1.6) 55%,
	                                  shade(@scroll_slider_color, 0.6));
	background-repeat: no-repeat;
	background-position: center;
}

/*********
 * Menus *
 *********/

/* this controls the general appearance of the menubar */
menubar,
.menubar {
    background-image: none;
    background-color: @theme_bg_color;
    border-width: 0px;
    border-style: none;
    padding: 0px;
    color: @theme_text_color;
    -GtkWidget-window-dragging: true;
}

menubar menuitem,
.menubar menuitem {
    -gtk-icon-style: regular;
    transition: all 300ms ease-out;
    padding: 3px 7px;
    border-width: 0px;
    border-style: none;
    background-color: transparent;
}

menu menuitem,
.menu menuitem {
    padding: 3px 4px;
    transition: all 300ms ease-out;
    border-width: 0px;
	border-radius: 3px 3px 0px 0px;
    border-style: solid;
    border-width: 1px;
    border-radius: 3px;
    border-image: none;
	border-color:transparent;
}
/* ... */

